# querymind

./: .coveragerc  .env.example  .gitignore  ALL_DONE.md  API_EXAMPLES.md  ARCHITECTURE_UPDATE_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSRF_FIX.md  CSS_PHASE1_DEAD_CODE_CLEANUP.md  DATA_ISOLATION_ADDED.md  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  DOCUMENTATION_POLICY.md  DOCUMENTATION_UPDATE_SUMMARY.txt  DOCUMENT_CLASSIFICATION_SUMMARY.md  FAQ.md  FINAL_PROJECT_SUMMARY.txt  FIX_PLAN.md  FRONTEND_INTEGRATION_TEST_GUIDE.md  GITHUB_PUBLICATION_STRATEGY.md  GITHUB_RELEASE_CHECKLIST.md  GLOBAL_MODEL_OVERRIDE.md  INTELLIGENCE_UPGRADE_SUMMARY.md  LLM_INTENT_CLASSIFIER_SUMMARY.md  MODELS.md  MODEL_CONFIG_UPGRADE_2026.md  NEXT_OPTIMIZATION_PROMPT.md  OPTIMIZATION_COMPLETE_REPORT.md  OPTIMIZATION_FINAL_ANSWER.md  OPTIMIZATION_SUMMARY.md  P1_VIEWER_ANALYST_COMPLETION.md  P2_FRONTEND_INTEGRATION_COMPLETE.md  P2_IMPLEMENTATION_REPORT.md  P2_PROGRESS_SUMMARY.md  (+29 more)
.claude/: HISTORY_DOCS_PROGRESS.md  QUICK_REFERENCE.md  SKILLS_GUIDE.md
.claude/completed/: 2026-04-09-v0.2.1-summary.md  2026-04-19-v0.2.4-summary.md  (+9 more)
app/: __version__.py  main.py
app/api/: main.py  (+3 more)
config/: circuit_breaker.json  router_calibration.json
docs/: .gitignore  2026-06-27-agent-quality-optimization-design.md  2026-06-27-agent-quality-optimization-plan.md  ALL_FIXES_COMPLETE.md  BACKEND_BEST_PRACTICES.md  BACKEND_FIXES_v0.4.6.md  CODE_FIXES_COMPLETE_REPORT.md  COMMIT_PREPARATION.md  COMPLETE_DOCUMENTATION_REPORT.md  COMPLETE_SYSTEM_OPTIMIZATION.md  COMPLETION_REPORT.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE_v0.6.0.md  DEVELOPER_GUIDE.md  DOCLING_INTEGRATION_SUMMARY.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_ENHANCEMENTS.md  DOCUMENTATION_INDEX.md  FINAL_CHECK_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_COMPLETION_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  FIX_SUMMARY_v0.4.6.md  GRAPH_RAG_AGENT_OPTIMIZATION.md  GRAPH_RAG_OPTIMIZATION_FINAL.md  GRAPH_RAG_OPTIMIZATION_SUMMARY.md  GRAPH_RAG_PDF_OPTIMIZATION_GUIDE.md  HIGH_PRIORITY_SOLUTIONS.md  HONEST_STATUS_REPORT.md  INDEX.md  INTERVIEW_DEMO_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_HISTORY.md  OPTIMIZATION_TODO.md  PDF_ENHANCEMENT_SUMMARY.md  PDF_FIXES_SUMMARY.md  PDF_HEALTH_CHECK.md  PDF_ISSUES_AND_FIXES.md  PDF_PERFORMANCE_TUNING.md  PDF_TESTING_GUIDE.md  (+29 more)
examples/: agent_tracking_demo.py  batch_chart_extraction_example.py  graph_rag_optimization_quickstart.py  performance_comparison_demo.py  streaming_pdf_example.py
frontend/: CHAT_LIGHT_THEME_UNIFIED_FIX.md  CSS_OPTIMIZATION_PLAN.md  CSS_ORGANIZATION.md  CSS_REFACTOR_EXECUTION_GUIDE.md  CSS_REFACTOR_PHASE4_START.md  CSS_REFACTOR_PHASE5_SUMMARY.md  CSS_REFACTOR_PHASE6_SUMMARY.md  CSS_REFACTOR_PHASE7_SUMMARY.md  CSS_REFACTOR_PHASE8_FINAL_REPORT.md  CSS_REFACTOR_PHASE8_SUMMARY.md  CSS_REFACTOR_SUMMARY.md  CSS_REFACTOR_VERIFICATION_REPORT.md  CSS_STRUCTURE_ANALYSIS.md  CSS_THEME_FIX.md  OPTIMIZATION_SUMMARY.md  REFACTOR_PHASE10_SUMMARY.md  REFACTOR_PHASE11_SUMMARY.md  REFACTOR_PHASE12_SUMMARY.md  REFACTOR_PHASE13_SUMMARY.md  REFACTOR_PHASE14_SUMMARY.md  REFACTOR_PHASE15_SUMMARY.md  REFACTOR_PHASE16_SUMMARY.md  REFACTOR_PHASE17_SUMMARY.md  REFACTOR_PHASE18_SUMMARY.md  REFACTOR_PHASE19_SUMMARY.md  REFACTOR_PHASE20_SUMMARY.md  REFACTOR_PHASE21_SUMMARY.md  REFACTOR_PHASE22_SUMMARY.md  REFACTOR_PHASE23_SUMMARY.md  REFACTOR_PHASE24_SUMMARY.md  REFACTOR_PHASE25_SUMMARY.md  REFACTOR_PHASE26_SUMMARY.md  REFACTOR_PHASE27_SUMMARY.md  REFACTOR_PHASE29_SUMMARY.md  REFACTOR_PHASE2_SUMMARY.md  REFACTOR_PHASE30_SUMMARY.md  REFACTOR_PHASE31_SUMMARY.md  REFACTOR_PHASE32_SUMMARY.md  REFACTOR_PHASE33_SUMMARY.md  REFACTOR_PHASE34_SUMMARY.md  (+30 more)
project_audit/: 00_审计计划总览.md  01_后端API审计报告.md  02_前端功能审计报告.md  03_认证授权安全系统审计报告.md  04_多Agent工作流审计报告.md  05_检索系统审计报告.md  06_数据库和存储审计报告.md  07_性能和并发审计报告.md  08_测试和代码质量审计报告.md  09_优先级修复清单.md  10_AI辅助修复计划.md  11_完整P0问题清单.md  README.md
releases/: RELEASE_NOTES_v0.4.5.md
scripts/: ab_comparison.py  add_agent_labels.py  admin_script_utils.py  auto_screenshot.py  backup_database.py  benchmark_optimization.py  bump_version.py  check_agent_labels.py  check_config.py  check_oauth_config.py  ci_quality_gate.py  classify_documents.py  cleanup_root_docs.py  compare_structure_versions.py  complete_screenshot.py  complete_verification.sh  create_admin.py  create_golden_dataset.py  demo_react_agent.py  demo_text_structure.py  document_toolkit.py  eval_rag_ragas.py  fix_chinese_quotes.py  generate_better_screenshots.py  generate_demo_screenshots.py  ingest_demo_data.py  list_users.py  load_test.py  manage_users.py  optimize_graph_rag_accuracy.py  query_analytics.py  quick_test_structure.py  reindex_security_docs.py  reset_admin_password.py  run_evaluation.py  screenshot_guide.py  setup_demo_dataset.py  test_and_reset_admin.py  test_chart_extraction.py  test_components_simple.py  (+18 more)
tests/: conftest.py  golden_dataset.json  golden_dataset.py  test_adaptive_cache.py  test_admin_maintenance_scripts.py  test_admin_ops_api.py  test_admin_script_utils.py  test_admin_security.py  test_admin_user_provisioning.py  test_advanced_rag_route.py  test_advanced_rag_workflow.py  test_agent_resilience.py  test_agent_scope_filtering.py  test_alerting.py  test_api_rag_scope.py  test_apply_rollback_profile.py  test_auth_db_service.py  test_auto_ingest_watcher.py  test_batch_chart_extractor.py  test_bulkhead_fix.py  test_chinese_bm25.py  test_ci_quality_gate.py  test_concurrency_regression.py  test_cors_prod_guard.py  test_custom_exceptions.py  test_document_dedup.py  test_document_registry.py  test_documents_upload_async.py  test_external_vision_redaction.py  test_golden_dataset.py  test_graph_rag_agent.py  test_graph_rag_agent_enhanced.py  test_graph_rag_optimization.py  test_graph_rag_optimizer_script.py  test_graph_triplet_quality.py  test_history_strategy_lock.py  test_hybrid_parent_backfill.py  test_incremental_indexing.py  test_index_health.py  test_index_manager.py  (+25 more)
(+828 files in other folders)
