[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-local-rag"
version = "0.4.2"
description = "Local multi-agent RAG system with LangGraph, Chroma, Neo4j, and web fallback"
readme = "README.md"
requires-python = ">=3.11"
# Core dependencies: smallest set that boots the FastAPI backend, vector store,
# graph integration, query orchestration, and basic PDF/text ingestion.
# Heavy ML/OCR stacks live in extras (see [project.optional-dependencies]).
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-cli[inmem]>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-chroma>=0.2.0",
  "chromadb>=0.5.5",
  "neo4j>=5.24.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langchain-ollama>=0.2.0",
  "pypdf>=5.0.0",
  "Pillow>=10.0.0",
  "python-dotenv>=1.0.1",
  "ddgs>=8.0.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "tenacity>=9.0.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "authlib>=1.3.0",
  "itsdangerous>=2.1.0",
  "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
# Tesseract-based OCR for image and scanned-PDF ingestion. Requires the
# native ``tesseract`` binary on PATH (see TESSERACT_CMD env var).
ocr = [
  "pytesseract>=0.3.10",
]
# PaddleOCR layout-aware OCR (Chinese-friendly). Adds ~500MB of native libs.
paddle = [
  "paddlepaddle>=2.6.0",
  "paddleocr>=2.7.0",
]
# Docling document conversion for structured PDF/DOCX/PPTX parsing.
docling = [
  "docling>=2.93.0",
]
# Cross-encoder reranking via sentence-transformers (BAAI/bge-reranker-v2-m3
# by default). Falls back to lexical scoring when missing.
reranker = [
  "sentence-transformers>=3.0.1",
]
# Convenience meta-extra: equivalent to the historical full install.
full = [
  "multi-agent-local-rag[ocr,paddle,docling,reranker]",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "reportlab>=4.0.0",
  "psutil>=5.9.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Tooling configuration (consolidated from pytest.ini and .coveragerc)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".venv",
  ".tmp",
  "pytest_tmp_run_*",
  ".pytest_tmp*",
  ".pytest_basetemp",
  "artifacts",
  "frontend/node_modules",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
  "unit: Unit tests for individual components",
  "performance: Performance and benchmark tests",
  "integration: Integration tests across multiple components",
  "slow: Tests that take significant time to run",
]
tmp_path_retention_policy = "none"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
  "*/site-packages/*",
  "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  ".venv",
  ".tmp",
  "artifacts",
  "frontend",
  "data",
  ".langgraph_api",
  "internal_docs",
  "**/__pycache__",
]

[tool.ruff.lint]
# Conservative starter set; expand later as the codebase tightens.
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter, many long log/string lines)
  "B008",  # function calls in argument defaults (FastAPI Depends/Query pattern)
  "B904",  # raise from inside except (project intentionally hides chains in some places)
  "UP007", # X | Y syntax for Optional (mixed style across codebase)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]                        # tests use plain assert; allow assert False
"scripts/**" = ["E402", "T201"]              # scripts may print and import after sys.path edits
"app/services/agent_document_filter.py" = ["T201"]  # demo block under __main__
"app/evaluation/service.py" = ["T201"]       # CLI-style table printing is intentional

[tool.ruff.lint.isort]
known-first-party = ["app"]
